--- a/src/app/components/directives/widgets/dashboard.html
+++ b/src/app/components/directives/widgets/dashboard.html
@@ -16,7 +16,7 @@
         </span>
         
         <button class="waves-effect waves-light btn colorAccent" ng-click="resetWidgetsToDefault()"><i
-                class="material-icons">refresh</i></button>
+                class="material-icons">settings_backup_restore</i></button>
 
         <button ng-if="options.storage && options.explicitSave" ng-click="options.saveDashboard()"
                 class="waves-effect waves-light btn colorAccent" ng-disabled="!options.unsavedChangeCount">{{
