--- a/src/app/modules/commons/users/profile/billing.html
+++ b/src/app/modules/commons/users/profile/billing.html
@@ -69,7 +69,7 @@
                                 </td>
                                 <td ng-bind="'xxxx xxxx xxxx ' + s.cardInfo.last4"></td>
                                 <td>
-                                    <button ng-click="getBill($parent.$index, s.paymentId, s.id)"
+                                    <button ng-click="getBill($parent.$index, s.id, s.paymentId)"
                                             class="waves-effect waves-teal btn-flat"><i class="material-icons">cloud_download</i>
                                     </button>
                                 </td>
