--- a/src/app/index.css
+++ b/src/app/index.css
@@ -935,3 +935,21 @@ table.super-fancy tr.foobar {
         transform: translateY(-5px);
     }
 }
+
+.toast-top-full-width {
+    left:0 !important;
+    top: 65px;
+    right:0 !important;
+    max-width: 100% !important;
+}
+.toast-top-full-width > div {
+    width: 100% !important;
+}
+.toast-top-full-width  a {
+    color: #fff !important;
+    font-weight: bold;
+    text-decoration: underline;
+}
+.nav-padding {
+    margin-bottom: 65px;
+}
