--- a/src/app/components/directives/widgets/dashboard.html
+++ b/src/app/components/directives/widgets/dashboard.html
@@ -40,8 +40,8 @@
                     <span ng-click="widget.contentStyle.display = widget.contentStyle.display === 'none' ? 'block' : 'none'">
                         <i class="material-icons right">
                             {{ widget.contentStyle.display ===
-                            'none'?'arrow_drop_up':''}}{{widget.contentStyle.display !==
-                            'none'?'arrow_drop_down':''}}
+                            'none'?'expand_more':''}}{{widget.contentStyle.display !==
+                            'none'?'expand_less':''}}
                         </i>
                     </span>
                     <span ng-if="widget.activator"><i class="activator material-icons right">more_vert</i></span>
