--- a/src/app/index.css
+++ b/src/app/index.css
@@ -997,25 +997,18 @@ table.super-fancy tr.foobar {
         transform: translateY(-5px);
     }
 }
-
-.toast-top-full-width {
-    left: 0 !important;
-    top: 65px;
-    right: 0 !important;
-    max-width: 100% !important;
-    z-index: 90 !important;
-}
-
-.toast-top-full-width > div {
-    width: 100% !important;
-}
-
-.toast-top-full-width a {
-    color: #fff !important;
+.trial a {
+    color: #fff;
     font-weight: bold;
-    text-decoration: underline;
 }
 
+.trial {
+  /*  padding-top: 80px; */
+    position: absolute;
+    top: 50px;
+    right: 0;
+    left: 0;
+}
 .nav-padding {
     margin-bottom: 65px;
 }
