--- a/src/app/modules/commons/users/signup/signupStart.html
+++ b/src/app/modules/commons/users/signup/signupStart.html
@@ -5,7 +5,7 @@
     <!-- Entete -->
     <div class="row">
         <div class="col s12">
-            <div class="row blue-grey darken-2 white-text center">
+            <div class="row colorMain white-text center">
                 <div class="col s1">
                     <br/>&nbsp;
                 </div>
