--- a/src/app/modules/public/pricing.html
+++ b/src/app/modules/public/pricing.html
@@ -65,7 +65,7 @@
     </div>
     <p class="center-align" translate="pricing.team-subscribe"></p>
 </div>
-<div class="pricing red white-text">
+<div class="pricing colorMain white-text">
     <div class="container center-align">
         <div class="row valign-middle">
             <div class="col m6 s12 left-align">
