--- a/src/app/components/directives/widgets/podium/podium.html
+++ b/src/app/components/directives/widgets/podium/podium.html
@@ -9,8 +9,8 @@
                 <simple-avatar person="players[0]" link="('#/private/viewPlayer/' + players[0]._id)" width="'80px'"></simple-avatar>
                 <br> {{players[0].firstname}}
                 <br> 
-                <h4 ng-if="indicator==='playTime'">{{players[0].value/60 | number : 0}} '</h4>
-                <h4 ng-if="indicator==='goalScored'">{{players[0].value}} </h4>
+                <h4 class="white-text" ng-if="indicator==='playTime'">{{players[0].value/60 | number : 0}} '</h4>
+                <h4 class="white-text" ng-if="indicator==='goalScored'">{{players[0].value}} </h4>
             </div>
             <div class="col s4" style="background-image:url(/assets/images/trophy2.png); 
                                        background-repeat:no-repeat; 
@@ -20,8 +20,8 @@
                 <simple-avatar person="players[1]" link="('#/private/viewPlayer/' + players[1]._id)" width="'80px'"></simple-avatar> 
                 <br> {{players[1].firstname}}
                 <br> 
-                 <h4 ng-if="indicator==='playTime'">{{players[1].value/60 | number : 0}} '</h4>
-                <h4 ng-if="indicator==='goalScored'">{{players[1].value}}</h4>
+                 <h4 class="white-text" ng-if="indicator==='playTime'">{{players[1].value/60 | number : 0}} '</h4>
+                <h4 class="white-text" ng-if="indicator==='goalScored'">{{players[1].value}}</h4>
             </div>
             
             <div class="col s4" style="background-image:url(/assets/images/trophy3.png); 
@@ -32,8 +32,8 @@
                 <simple-avatar person="players[2]" link="('#/private/viewPlayer/' + players[2]._id)" width="'80px'"></simple-avatar>
                 <br> {{players[2].firstname}}
                 <br> 
-                <h4 ng-if="indicator==='playTime'">{{players[2].value/60 | number : 0}} '</h4>
-                <h4 ng-if="indicator==='goalScored'">{{players[2].value}}</h4>
+                <h4 class="white-text" ng-if="indicator==='playTime'">{{players[2].value/60 | number : 0}} '</h4>
+                <h4 class="white-text" ng-if="indicator==='goalScored'">{{players[2].value}}</h4>
             </div>
         </div>
 </div>
