URL appli mobile à partir du fichier de conf

--- a/src/app/components/directives/commons/headerMenu/headerMenu.html
+++ b/src/app/components/directives/commons/headerMenu/headerMenu.html
@@ -11,7 +11,7 @@
                 <span class="banner-appl-author">Qaobee</span>
             </p>
         </div>
-        <div class="col s4"><a href="https://play.google.com/apps/testing/com.qaobee.qswarm.hand" class="banner-btn-dl">Télécharger</a>
+        <div class="col s4"><a ng-click="openDownload()" class="banner-btn-dl">Télécharger</a>
         </div>
     </div>
 </div>
