--- a/src/app/modules/commons/users/signup/signupStartDone.html
+++ b/src/app/modules/commons/users/signup/signupStartDone.html
@@ -40,9 +40,13 @@
             <h5 class="center-align" translate="landing.area-4.content"></h5>
             <div class="row">
                 <span class="col m2 hide-on-small-only">&nbsp;</span>
-                <img class="col m3 s12 center-align" src="assets/images/appstore.png" alt="AppStore"/>
+                <a href="{{url.apple}}" target="_blank">
+                	<img class="col m3 s12 center-align" src="assets/images/appstore.png" alt="AppStore"/>
+                </a>
                 <span class="col m2 hide-on-small-only">&nbsp;</span>
-                <img class="col m3 s12 center-align" src="assets/images/googleplay.png" alt="Googleplay"/>
+                <a href="{{url.google}}" target="_blank">
+                	<img class="col m3 s12 center-align" src="assets/images/googleplay.png" alt="Googleplay"/>
+                </a>
                 <span class="col m2 hide-on-small-only">&nbsp;</span>
             </div>
         </div>
